# mawiegand.github.io

./: .gitignore  CNAME  README.md  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: pelican.yml
content/: post.md
content/pages/: about.md
themes/simplify-theme/templates/: base.html
